[package]
name = "reality"
version = "0.1.0"
authors = ["alokc"]
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "js"] }
automerge = { version = "0.5", features = ["wasm"] }
dioxus = { version = "0.7", features = ["router"], optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
futures-channel = { version = "0.3", optional = true }
gloo-net = { version = "0.6", features = ["websocket"], optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Window", "Document", "Blob", "Url", "Location",
    "Navigator", "Clipboard", "HtmlAnchorElement", "HtmlTextAreaElement",
] }
axum = { version = "0.7", features = ["ws"], optional = true }
tokio = { version = "1",   features = ["full"], optional = true }
dashmap = { version = "5",   optional = true }
tower-http = { version = "0.5", features = ["cors", "fs"], optional = true }

[features]
web = [
    "dioxus",
    "dioxus/web",
    "js-sys",
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "futures-channel",
    "gloo-net",
    "web-sys",
]
server = [
    "axum",
    "tokio",
    "dashmap",
    "tower-http",
]
default = ["web"]

[[bin]]
name = "reality"
path = "src/main.rs"
required-features = ["web"]

[[bin]]
name = "reality-server"
path = "src/server_main.rs"
required-features = ["server"]